Fix file extensions of images

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div class="row justify-content-center gap-3 row-gap-4 pb-5">
 				<!-- Project 1 Card Start -->
 				<div class="card p-0">
-				  <img src="./images/projects/project-1.png" class="card-img-top" alt="Tic-Tac-Toe App">
+				  <img src="./images/projects/project-1.PNG" class="card-img-top" alt="Tic-Tac-Toe App">
 				  <div class="card-body">
 				    <h5 class="card-title fw-bold">Tic-Tac-Toe</h5>
 				    <p class="card-text">A two-player game where players take turns marking a 3x3 grid, aiming to get three in a row, column, or diagonal to win.</p>
@@ -94,7 +94,7 @@
 
 				<!-- Project 2 Card Start -->
 				<div class="card p-0">
-				  <img src="./images/projects/project-2.png" class="card-img-top" alt="Basic Calculator">
+				  <img src="./images/projects/project-2.PNG" class="card-img-top" alt="Basic Calculator">
 				  <div class="card-body">
 				    <h5 class="card-title fw-bold">Basic Calculator</h5>
 				    <p class="card-text">A simple calculator that performs basic mathematical calculations, featuring basic arithmetic operations.</p>
@@ -110,7 +110,7 @@
 
 				<!-- Project 3 Card Start -->
 				<div class="card p-0">
-				  <img src="./images/projects/project-3.png" class="card-img-top" alt="Etch-a-Sketch">
+				  <img src="./images/projects/project-3.PNG" class="card-img-top" alt="Etch-a-Sketch">
 				  <div class="card-body">
 				    <h5 class="card-title fw-bold">Etch-a-Sketch</h5>
 				    <p class="card-text">An interactive digital drawing tool that lets users create art by moving their cursor on the screen.</p>
